--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.93"
+base64 = "0.22.1"
+clap = { version = "4.5.20", features = ["derive"] }
+reqwest = { version = "0.12.9", optional = true, features = ["blocking", "default-tls", "deflate", "gzip", "http2"], default-features = false }
+serde = "1.0.214"
+serde_derive = "1.0.214"
+serde_json = "1.0.132"
+
+[features]
+reqwest = ["dep:reqwest"]
